--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,52 +1,48 @@
-.slick-track .slick-active button {
-  animation: fadeIn 4s;
-  animation-iteration-count: 1;
-  animation-fill-mode: backwards;
-  -webkit-animation: fadeIn 4s;
-  -moz-animation: fadeIn 4s;
-  -o-animation: fadeIn 4s;
-  -ms-animation: fadeIn 4s;
+.banner-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
-
-.slick-track .slick-active h1 {
-  animation: fadeIn 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: backwards;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+.slider-header-wrapper {
+  grid-column: 1/3;
+  grid-row: 2;
+  z-index: 1;
+  background-color: rgba(255,255,255,.7);
+  text-align: center;
+  height: fit-content;
+  margin-left: 1em;
 
 }
 
+.slider-header-wrapper h1 {
 
-@keyframes fadeIn {
-  0% {opacity: 0;}
-  80% {opacity: 0;}
-  100% {opacity: 1;}
+}
+/* 
+.slider-text {
+  grid-column: 1 / 3;
+  grid-row: 2;
+  z-index: 4;
+  background-color: rgba(255,255,255,.7);
+  color:  black;
+  width: fit-content;
+  height: fit-content;
+  margin-top: 9em;
+  margin-left: 12em;
+} */
+
+.slider-button-wrapper {
+  grid-column: 2;
+  grid-row: 3;
+  z-index: 1;
+  height: 46px;
+  margin: 24px 36px;
 }
 
-@-moz-keyframes fadeIn {
-  0% {opacity: 0;}
-  80% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
-@-webkit-keyframes fadeIn {
-  0% {opacity: 0;}
-  80% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
-@-o-keyframes fadeIn {
-  0% {opacity: 0;}
-  80% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
-@-ms-keyframes fadeIn {
-  0% {opacity: 0;}
-  80% {opacity: 0;}
-  100% {opacity: 1;}
+.slider-button-wrapper button {
+  color: white;
+  font-size: 24px;
+  background-color: black;
+  border: 1px solid white;
+  padding: 6px;
 }
