--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -4,19 +4,22 @@
   grid-template-rows: repeat(4, 1fr);
 }
 
+.banner-wrapper img {
+  grid-column: 1 / 5;
+  grid-row: 1 / 5;
+}
+
 .slider-header-wrapper {
   grid-column: 1/3;
   grid-row: 2;
   z-index: 1;
-  background-color: rgba(255,255,255,.7);
+  background-color: rgba(255, 255, 255, 0.7);
   text-align: center;
   height: fit-content;
   margin-left: 1em;
-
 }
 
 .slider-header-wrapper h1 {
-
 }
 /* 
 .slider-text {
