non working slider using react-image-gallery

--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -19,8 +19,8 @@
   margin-left: 1em;
 }
 
-.slider-header-wrapper h1 {
-}
+/* .slider-header-wrapper h1 {
+} */
 /* 
 .slider-text {
   grid-column: 1 / 3;
